refactor(InputView): `toList` 사용해 리스트 변환 로직 간소화