@@ -3,7 +3,6 @@ package racingcar.view;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class InputView {
     private static final String QUESTION_CAR_NAMES = "경주할 자동차 이름을 입력하세요.(이름은 쉼표(,) 기준으로 구분)";
@@ -11,7 +10,6 @@ public class InputView {
     public List<String> askCarNames() {
         System.out.println(QUESTION_CAR_NAMES);
         String inputCarNames = Console.readLine();
-        return Arrays.stream(inputCarNames.split(","))
-                .collect(Collectors.toList());
+        return Arrays.stream(inputCarNames.split(",")).toList();
     }
 }
